[FIX] web: fix list view with search panel
In list views with search panel, in case there are no records found,
the nocontenthelp is being cut off,
because the o_list_renderer doesn't take the full height.
This commit sets the height on the div, so there is no cut off happening.

Part of: task-3619987

closes odoo/odoo#147249

X-original-commit: 52c916089547c96c2d16c0c6134b40270b72b72d

--- a/addons/web/static/src/search/search_panel/search_panel.scss
+++ b/addons/web/static/src/search/search_panel/search_panel.scss
@@ -11,6 +11,7 @@
         overflow: auto; // make the renderer and search panel scroll individually
         max-height: 100%;
         position: relative;
+        height: 100%;
 
         @include media-breakpoint-down(md) {
             overflow: visible;
